[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["draju1980 <draju@outlook.com>"]
description = ""
name = "hello-world"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
lxml = "^4.5.1"
[tool.poetry.dev-dependencies]
